# lempify

./: .gitignore  .prettierignore  READ.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: build-daemon.js  constants.js  constants.ts  lempifyd-build.ts  lempifyd-rename.ts  rename-daemon.js
src/: App.tsx  constants.ts  index.css  main.tsx
src-tauri/: .taurignore  Cargo.toml  REFACTOR.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/lempifyd/: Cargo.toml  lempifyd.rs
src-tauri/lempifyd/helpers/: constants.rs  ipc.rs  mod.rs  php.rs
src-tauri/lempifyd/models/: mod.rs  services.rs
src-tauri/lempifyd/service/: mod.rs  nginx.rs  php.rs
src-tauri/lempifyd/services/: composer.rs  config.rs  error.rs  isolation.rs  mailpit.rs  memcached.rs  mkcert.rs  mod.rs  mysql.rs  nginx.rs  php.rs  redis.rs  wp_cli.rs
src-tauri/lempifyd/traits/: service_controller.rs
src-tauri/shared/: Cargo.toml
src-tauri/shared/src/: brew.rs  constants.rs  dirs.rs  file_system.rs  hosts.rs  lib.rs  nginx.rs  osascript.rs  ssl.rs  utils.rs  utils_legacy.rs
src-tauri/shared/src/utils/: brew.rs  mod.rs  paths.rs  service.rs
src-tauri/src/: constants.rs  error.rs  lib.rs  main.rs  services.rs  test.rs
src-tauri/src/commands/: control_service.rs  debug.rs  install.rs  lempifyd.rs  mod.rs  nginx.rs  open_code.rs  repair.rs  service_status.rs  site.rs  sites.rs  ssl.rs  start_stop.rs  sudoers.rs  window.rs
src-tauri/src/helpers/: brew.rs  config.rs  constants.rs  file_system.rs  hosts.rs  ipc.rs  lempifyd.rs  mod.rs  nginx.rs  osascript.rs  paths.rs  php.rs  service_utils.rs  setup.rs  sidecar.rs  ssl.rs  stubs.rs  system.rs  user.rs  utils.rs
src-tauri/src/models/: config.rs  service.rs  site.rs
src-tauri/src/site_types/: install.rs  mod.rs  uninstall.rs  wordpress.rs
src-tauri/src/ui/: browser.rs  menu.rs  mod.rs  tray.rs
src-tauri/src/utils/: mod.rs  service_helpers.rs
src-tauri/stubs/: domain_name-domain_tld.nginx.conf
src-tauri/stubs/drupal/: .env
src-tauri/stubs/laravel/: .env  composer.json
src-tauri/stubs/vanilla/: .env  composer.json
src-tauri/stubs/wordpress/: wp-config.php
src-tauri/stubs/wordpress/wp-content/: object-cache.php
src-tauri/stubs/wordpress/wp-content/mu-plugins/lempify/: object-cache-memcached.php  object-cache-redis.php  object-cache.php
src/Components/: types.ts  (+2 more)
testical/: config.json
(+148 files in other folders)
