[package]
name = "lempify"
version = "0.1.0"
description = "LEMP Stack Local Development App."
authors = ["jaredrethman"]
edition = "2021"
default-run = "lempify"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tauri = { version = "2", features = [ "tray-icon" ] }
shared = { path = "shared" }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
users = "0.11.0"
dirs = "6.0.0"
tauri-plugin-shell = "2.2.1"
whoami = "1.6.0"
which = "7.0.3"
once_cell = "1"
regex = "1"
tauri-plugin-process = "2.0.0-alpha"
reqwest = { version = "0.12.20", features = ["json"] }
chrono = "0.4"
zip = "4.0.0"

[workspace]
members = [
    ".", "shared",
    "lempifyd",
    "shared"
]
